--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
 		<!--search container-->
 		<div id="searchCont" class="d-flex justify-content-center align-items-center p-2 bg-primary">
-			<figure id="companyLogo" class="col">
+			<figure id="companyLogo" class="col pe-1">
 				<a href="#headerCont" target="" class="w-100 h-100">
 					<img src="#" alt="company homepage" class="text-white img-fluid">
 				</a>
 			</figure>
-			<div id="searchBar" class="col">
+			<div id="searchBar" class="col pe-1">
 				<select id="searchSelect" aria-label="select category to search a product" class="col-12 p-1 my-1 rounded">
 					<option class="searchOpt" selected>All categories</option>
 					<option class="searchOpt">category</option>
@@ -64,10 +64,10 @@
 				<input id="searchBar" type="text" placeholder="Search" class="col-12 p-1 my-1 rounded">
 				<input id="searchBtn" type="button" value="Search" class="col-12 p-1 my-1 bg-warning text-body rounded">
 			</div>
-			<div id="searchIcons" class="col row">
-				<label aria-label="sort items" class="col d-flex justify-content-center align-items-center"><i class="material-icons text-white" role="button">swap_horiz</i></label>
-				<label aria-label="favorite page" class="col d-flex justify-content-center align-items-center"><i class="material-icons text-white" role="button">favorite_border</i></label>
-				<div id="shopCart" class="col-md-6" role="button">
+			<div id="searchIcons" class="col row pe-1">
+				<label aria-label="sort items" class="col d-flex justify-content-center align-items-center mb-sm-1"><i class="material-icons text-white" role="button">swap_horiz</i></label>
+				<label aria-label="favorite page" class="col d-flex justify-content-center align-items-center mb-sm-1"><i class="material-icons text-white" role="button">favorite_border</i></label>
+				<div id="shopCart" class="col-md-6 mb-sm-1" role="button">
 					<div id="shopTxt" class="row">
 						<div class="d-flex justify-content-center align-items-center">
 							<i class="material-icons text-white pe-2">local_mall</i>
