--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		</div>
 
 		<!--promo container-->
-		<main class="position-relative row">
+		<main class="position-relative row d-flex justify-content-center">
 			<div id="carousel" class="p-2 carousel slide col-md-8" data-bs-ride="carousel">
 				<div id="dots" class="carousel-indicators">
 					<button data-bs-target="#carousel" data-bs-slide-to="0" class="active"><i class="material-icons dots">panorama_fish_eye</i></button>
@@ -191,44 +191,44 @@
 		</main>
 
 		<!--advantages container-->
-		<div id="advantagesCont" class="p-2">
-			<div class="advItems">
-				<img src="#" class="" alt="">
-				<div class="" aria-label="delivery">
-					<p>free delivery</p>
-					<p>from $59,89</p>
+		<div id="advantagesCont" class="row d-flex justify-content center p-2 mt-md-3">
+			<div class="col d-flex justify-content-center align-items-center">
+				<i class="material-icons" style="font-size:3rem">airport_shuttle</i>
+				<div class="text-capitalize ms-xl-3" aria-label="delivery h-25">
+					<p class="m-0 fw-bold">free delivery</p>
+					<p class="m-0">from $59,89</p>
 				</div>
 			</div>
 
-			<div class="advItems">
-				<img src="#" class="" alt="">
-				<div class="" aria-label="support">
-					<p>support 24/7</p>
-					<p>online 24 hours</p>
+			<div class="col d-flex justify-content-center align-items-center">
+				<i class="material-icons" style="font-size:3rem">person</i>
+				<div class="text-capitalize ms-xl-3" aria-label="support">
+					<p class="m-0 fw-bold">support 24/7</p>
+					<p class="m-0">online 24 hours</p>
 				</div>
 			</div>
 
-			<div class="advItems">
-				<img src="#" class="" alt="">
-				<div class="" aria-label="return">
-					<p>free return</p>
-					<p>365 a day</p>
+			<div class="col d-flex justify-content-center align-items-center">
+				<i class="material-icons" style="font-size:3rem">autorenew</i>
+				<div class="text-capitalize ms-xl-3" aria-label="return">
+					<p class="m-0 fw-bold">free return</p>
+					<p class="m-0">365 a day</p>
 				</div>
 			</div>
 
-			<div class="advItems">
-				<img src="#" class="" alt="">
-				<div class="" aria-label="payment">
-					<p>payment method</p>
-					<p>secure payment</p>
+			<div class="col d-flex justify-content-center align-items-center">
+				<i class="material-icons" style="font-size:3rem">payment</i>
+				<div class="text-capitalize ms-xl-3" aria-label="payment">
+					<p class="m-0 fw-bold">payment method</p>
+					<p class="m-0">secure payment</p>
 				</div>
 			</div>
 
-			<div class="advItems">
-				<img src="#" class="" alt="">
-				<div class="" aria-label="saving">
-					<p>big saving</p>
-					<p>weeken sales</p>
+			<div class="col d-flex justify-content-center align-items-center">
+				<i class="material-icons" style="font-size:3rem">monetization_on</i>
+				<div class="text-capitalize ms-xl-3" aria-label="saving">
+					<p class="m-0 fw-bold">big saving</p>
+					<p class="m-0">weeken sales</p>
 				</div>
 			</div>
 
